# Bertram

./: .gitignore  Cargo.toml  README.md  build.rs  constants.py  run.sh.template
.github/workflows/: build.yml
builtin/: error.py
data/asset/: file.list
data/asset/agb/: batter.toml  clap.toml  ghost.toml  hair.toml  hopping.toml  marcher.toml  nightwalk.toml  quiz.toml  rabbit.toml  rat.toml  shuji.toml
data/asset/ntr/: airboard.toml  backbeat.toml  bluebirds.toml  boxshow.toml  cameraman.toml  chorus.toml  cointoss.toml  frog.toml  idol.toml  ninja.toml  pingpong.toml  robot.toml  shooting.toml  shortlive.toml  shugyo.toml
data/asset/remix/: 00.toml  01.toml  02.toml  03.toml  04.toml  05.toml  06.toml  LED.toml
data/asset/rvl/: assemble.toml  badminton.toml  batting.toml  bird.toml  book.toml  date.toml  fishing.toml  flea.toml  fork.toml
module/: asset.py  ctru.py  luma.py
old/builtin/: help.py
old/module/: ctru.py  luma.py
src/: ctru.rs  faq.rs  lib.rs  main.rs  test.rs
src/bot/: error.rs  event.rs  helpers.rs  main.rs
src/bot/commands/: admin.rs  crash.rs  help.rs  mod.rs  tags.rs
src/bot/commands/crash/: analyze.rs  luma.rs  mod.rs  saltwater.rs
src/crash/: analyze.rs  luma.rs  mod.rs  saltwater.rs  solve.rs
sym/: bounds.csv  example_sym.csv  sw_v0.2.csv
