[package]
name = "bertram"
version = "0.2.0"
edition = "2021"
default-run = "bertram-test"

[[bin]]
name = "bertram-test"
path = "src/test.rs"

[[bin]]
name = "bertram-bot"
path = "src/bot/main.rs"
required-features = ["bot"]

[dependencies]
bytestream = "0.4"
anyhow = "1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde-hex = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

tokio = { version = "1.21", features = [
    "macros",
    "rt-multi-thread",
], optional = true }
serenity = { version = "0.11", optional = true, default_features = false }
reqwest = { version = "0.11", optional = true }
poise = { version = "0.5", optional = true }

[features]
default = ["bot"]
bot = ["serenity", "tokio", "reqwest", "poise"]
